--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Abdoulaye DIALLO - Data Engineer</title>
+  <title>Abdoulaye DIALLO - Tech Lead Data</title>
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
   <header>
     <div class="container">
       <h1>Abdoulaye DIALLO</h1>
-      <p>Data Engineer</p>
+      <p>Tech Lead Data * AWS (2x) and Snowflake Certified</p>
       <nav>
         <ul>
           <li><a href="#about">About</a></li>
@@ -31,10 +31,11 @@
     <div class="container">
       <h2>About Me</h2>
       <p>
-        I am a passionate Data Engineer with extensive experience in data integration, migration, and cloud technologies.
-        With a strong background in data engineering, DevOps, and data analysis, I work on modernizing data infrastructures,
-        deploying scalable solutions, and ensuring robust data pipelines. I thrive in collaborative environments and have a track record
-        of delivering efficient solutions for leading companies.
+        I am a Tech Lead Data with extensive experience in data engineering, cloud technologies, and team leadership.
+        AWS (2x) and Snowflake certified, I specialize in data integration, migration, and building scalable data architectures.
+        With a strong background in data engineering, DevOps, and data analysis, I lead technical teams in modernizing data infrastructures,
+        deploying robust solutions, and ensuring best practices across the data lifecycle. I thrive in collaborative environments and have a proven
+        track record of delivering efficient, high-quality solutions for leading companies across various industries.
       </p>
     </div>
   </section>
@@ -44,46 +45,90 @@
       <h2>Experiences</h2>
       <div class="experience-card" onclick="toggleCard(this)">
         <div class="card-header">
-          <h3>ACCENTURE - Data Engineer (09/2024 - Present)</h3>
+          <h3>CANAL+ TECH - Tech Lead Data (10/2025 - Present)</h3>
           <span class="expand-icon">+</span>
         </div>
         <div class="card-content">
-          <p><strong>Client:</strong> Allianz Technology France – Team Data Lakehouse</p>
+          <p><strong>Team:</strong> Data Delivery - Engineering & IA</p>
+          <p>The Data Delivery team centralizes all data from set-top boxes, applications, and partners such as Orange and Free. It processes logs (content sessions), navigation data, and makes this information available for various internal uses including user navigation, content management, and video handling.</p>
           <ul>
-            <li>Integrated data with Python and SQL, deployed via GitHub Actions, ArgoCD, and Helm on Azure Storage.</li>
-            <li>Modernized projects including code refactoring and migrating authentication systems.</li>
-            <li>Supervised workflows using Grafana.</li>
+            <li>Lead the team's technological direction through tool and architecture selection, ensuring alignment with business needs and global strategy.</li>
+            <li>Maintain continuous monitoring of new technologies and industry best practices to anticipate evolution.</li>
+            <li>Support technical teams in skill development and facilitate collaboration between developers and stakeholders (PO/PM).</li>
+            <li>Guarantee the quality of delivered solutions.</li>
           </ul>
-          <p><strong>Technologies:</strong> Python, SQL, Azure, ArgoCD, Docker, Git, GitHub Actions, Sonarqube</p>
+          <p><strong>Technologies:</strong> Snowflake, AWS, Git, Airflow, CI/CD Tools, dbt</p>
         </div>
       </div>
       <div class="experience-card" onclick="toggleCard(this)">
         <div class="card-header">
-          <h3>ACCENTURE - DevOps & Cloud Engineer (01/2024 - 09/2024)</h3>
+          <h3>KEYRUS - Cloud Data Engineer (03/2025 - 10/2025)</h3>
           <span class="expand-icon">+</span>
         </div>
         <div class="card-content">
-          <p><strong>Client:</strong> Canal+ France – Team Infra & Architecture</p>
+          <p><strong>Client:</strong> Generali France – Team Data Analytics & Cognitive Factory</p>
+          <p>The Data Analytics & Cognitive Factory team at Generali France works across all group data (France), focusing on 360° customer view, infrastructure, and data governance to meet business needs across different divisions. This mission is part of Generali's data strategy aimed at business automation, data access standardization, time-to-market acceleration, innovation, and data quality improvement.</p>
           <ul>
-            <li>Maintained and evolved data infrastructure tools and architecture.</li>
-            <li>Managed Redshift migration tasks and performed DBA operations.</li>
-            <li>Deployed Dataiku platform integrating S3, Snowflake, Athena, and SSO Okta.</li>
-            <li>Collaborated with international teams from Poland and Vietnam.</li>
+            <li>Design and implementation of data products on Snowflake and Azure.</li>
+            <li>Development of data catalog and lineage.</li>
+            <li>Metadata management (strategic for Gen-AI).</li>
+            <li>Deployment of tools promoting business autonomy.</li>
+            <li>Development and deployment of data domain architecture (data mesh), addressing regulatory, operational, and performance challenges.</li>
+          </ul>
+          <p><strong>Technologies:</strong> Snowflake, Python, SQL, Azure, Git, dbt, Airflow, Internal Tools</p>
+        </div>
+      </div>
+      <div class="experience-card" onclick="toggleCard(this)">
+        <div class="card-header">
+          <h3>ACCENTURE - Data Engineer (09/2024 - 03/2025)</h3>
+          <span class="expand-icon">+</span>
+        </div>
+        <div class="card-content">
+          <p><strong>Client:</strong> Allianz Technology France – Team Data Lakehouse</p>
+          <p>The Data Lakehouse team manages Allianz France's global data platform and provides data access to all company departments. Participated in integrating data exchanged between Allianz and its partners in an Azure Storage environment, focusing on data integration, transformation, application modernization, and monitoring.</p>
+          <ul>
+            <li>Parsed and transformed JSON/CSV/Tab data to Delta Lake format for optimized analytics.</li>
+            <li>Developed comprehensive unit and functional tests to ensure data quality and pipeline reliability.</li>
+            <li>Deployed applications using Helm on ArgoCD for automated and consistent deployments.</li>
+            <li>Modernized legacy projects: refactored code for better maintainability, migrated PostgreSQL authentication to passwordless approach for enhanced security.</li>
+            <li>Implemented workflow supervision and monitoring using Grafana dashboards.</li>
+            <li>Collaborated in an agile environment with continuous integration via GitHub Actions.</li>
+          </ul>
+          <p><strong>Technologies:</strong> Python, SQL, Azure, ArgoCD, Docker, Git, GitHub Actions, Grafana</p>
+        </div>
+      </div>
+      <div class="experience-card" onclick="toggleCard(this)">
+        <div class="card-header">
+          <h3>ACCENTURE - Cloud Engineer (01/2024 - 09/2024)</h3>
+          <span class="expand-icon">+</span>
+        </div>
+        <div class="card-content">
+          <p><strong>Client:</strong> Canal+ France – Team Infrastructure & Technology</p>
+          <p>The Data Architecture and Technologies team is responsible for developing and maintaining architecture projects for the Data department. As a cloud engineer and operational DevOps support on several strategic projects, contributed to providing work environments for Data teams and worked on deploying the Dataiku platform.</p>
+          <ul>
+            <li>Automate deployments and ensure environment reproducibility (EC2, VPC, IAM, Roles, Backup).</li>
+            <li>Deployed Fleet Manager on AWS.</li>
+            <li>Set up 4 Dataiku nodes (Design, Deployer, Automation, Govern) from Fleet via Python API.</li>
+            <li>Performed POC for SSO Okta and SSO Snowflake authentication integration.</li>
+            <li>Monitored and decommissioned Redshift.</li>
           </ul>
           <p><strong>Technologies:</strong> Terraform, Python, AWS, Git, Jenkins, Airflow, Dataiku, Snowflake</p>
         </div>
       </div>
       <div class="experience-card" onclick="toggleCard(this)">
         <div class="card-header">
-          <h3>ACCENTURE - Data Engineer (10/2021 - 12/2024)</h3>
+          <h3>ACCENTURE - Data Engineer (10/2021 - 12/2023)</h3>
           <span class="expand-icon">+</span>
         </div>
         <div class="card-content">
           <p><strong>Client:</strong> Canal+ France – Team Data Factory</p>
+          <p>The Data Factory unit manages most of the customer data for Canal+ France and Canal+ International. Worked on modernizing their data warehouse, including migration from Teradata data warehouses to Snowflake cloud platform and migration and implementation of new Informatica ETL/ELT pipelines.</p>
           <ul>
-            <li>Managed database migrations and developed data integration pipelines.</li>
-            <li>Converted Teradata DDL to Snowflake using Python and SQL.</li>
-            <li>Supported junior developers on data warehousing best practices.</li>
+            <li>Converted Teradata DDL to Snowflake DDL using Python + SQL.</li>
+            <li>Implemented Teradata to Snowflake migration project.</li>
+            <li>Created/migrated (existing) pipelines in Informatica/Airflow/Snowflake environment.</li>
+            <li>Optimized data architecture (Informatica, Snowflake).</li>
+            <li>Mentored junior developers on data warehousing best practices.</li>
           </ul>
           <p><strong>Technologies:</strong> SQL, Python, Shell, Snowflake, Informatica, AWS, Git, Jenkins, Airflow</p>
         </div>
@@ -94,10 +139,12 @@
           <span class="expand-icon">+</span>
         </div>
         <div class="card-content">
+          <p><strong>Unité Distribution, Performance and Commercial Productivity </strong></p>
+          <p>The Performance and Commercial Productivity department provides distribution networks with tools for managing sales and responds to ad hoc requests for studies and data from various departments.</p>
           <ul>
-            <li>Supported performance and productivity analysis with advanced data analytics and machine learning.</li>
-            <li>Developed web scraping scripts and built data pipelines for analysis.</li>
-            <li>Performed statistical analyses and commercial performance evaluations.</li>
+            <li>Developed web scraping scripts in Python, created data processing and analysis pipelines (statistical exploration).</li>
+            <li>Calculated performance indicators and studied commercial performance.</li>
+            <li>Modeling and machine learning for prediction and clustering tasks.</li>
           </ul>
           <p><strong>Technologies:</strong> Python, PySpark, MicroStrategy, Jira</p>
         </div>
@@ -108,9 +155,10 @@
           <span class="expand-icon">+</span>
         </div>
         <div class="card-content">
+          <p><strong>Mission:</strong> Statistical analysis and predictive modeling</p>
           <ul>
-            <li>Conducted statistical analysis and predictive modeling for customer portfolio insights.</li>
-            <li>Developed segmentation models and scoring systems.</li>
+            <li>Studied Orange Money customer portfolio: Analysis of Orange Money service usage by customers and production of typological segments.</li>
+            <li>Built, prepared, and analyzed customer data, scoring model (regression).</li>
           </ul>
         </div>
       </div>
@@ -164,31 +212,45 @@
 
   <section id="certifications" class="section">
     <div class="container">
-      <h2>Certifications</h2>
+      <h2>Certifications & Trainings</h2>
       <div class="certifications-grid">
         <div class="certification-card">
           <h3>AWS Cloud Practitioner - CLF-C01</h3>
           <p>Entry-level certification validating AWS Cloud foundational knowledge.</p>
+          <a href="https://www.credly.com/badges/8e0bb4b8-5366-4ade-bd65-3c9c575fb29c/linked_in_profile" target="_blank">View Credential</a>
         </div>
         <div class="certification-card">
           <h3>AWS Solution Architect - SAA-CO3</h3>
           <p>Certification for designing distributed systems on AWS.</p>
+          <a href="https://www.credly.com/badges/b536597a-7ef4-40fe-b08f-5c9c8b067dda/linked_in_profile" target="_blank">View Credential</a>
         </div>
         <div class="certification-card">
           <h3>AWS Partner Technical Accredited</h3>
           <p>Accreditation for AWS partner technical enablement.</p>
+          <a href="https://www.credly.com/badges/6fd48883-5039-43a3-9f45-3c37f6958372/linked_in_profile" target="_blank">View Credential</a>
         </div>
         <div class="certification-card">
-          <h3>Dataiku Core and Advanced Training</h3>
-          <p>Certifications for Dataiku platform proficiency.</p>
+          <h3>Snowflake: SnowPro Core Certification</h3>
+          <p>Professional certification for Snowflake data platform expertise.</p>
+          <a href="https://achieve.snowflake.com/533279eb-7bde-45d2-995f-4d21268e409f#acc.y1b2nAOf" target="_blank">View Credential</a>
         </div>
         <div class="certification-card">
-          <h3>Snowflake Data Analytics Training</h3>
-          <p>Training in Snowflake data analytics solutions.</p>
+          <h3>Dataiku Advanced Designer Certification</h3>
+          <p>Advanced certification for Dataiku platform proficiency.</p>
+          <a href="https://verify.skilljar.com/c/jp9k32uxtusy" target="_blank">View Credential</a>
         </div>
         <div class="certification-card">
-          <h3>Helm, Docker, Terraform, AWS Data Analytics Training</h3>
-          <p>Trainings in DevOps and cloud data analytics tools.</p>
+          <h3>Dataiku Developer Certification</h3>
+          <p>Developer certification for building solutions on Dataiku.</p>
+          <a href="https://verify.skilljar.com/c/7nufobw6dftz" target="_blank">View Credential</a>
+        </div>
+        <div class="certification-card">
+          <h3>Informatica IDMC</h3>
+          <p>5+ foundational certifications and implementation training (see LinkedIn for details).</p>
+        </div>
+        <div class="certification-card">
+          <h3>DevOps & Cloud Tools Training</h3>
+          <p>Training in Helm, Docker, Terraform, and AWS Data Analytics tools.</p>
         </div>
       </div>
     </div>
